Fix EXT_draw_buffers detection on some GL ES 3 contexts

This also disables ES2 EXT_draw_buffers emulation on top of ES3+NV_draw_buffers as it's not needed anymore - EXT_draw_buffers can now be emulated on vanilla ES3.

This is important on some native GL ES 3 contexts (e.g. Qualcomm on Google Pixel).

BUG=688632
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2678483003
Cr-Commit-Position: refs/heads/master@{#450804}

Former-commit-id: 252e09263e39d4e06b2a9dc094ea30ca140e0a4d