gpu/command_buffer/service/test_helper.cc
@@ -365,9 +365,8 @@ void TestHelper::SetupContextGroupInitExpectations(
         .RetiresOnSaturation();
   }
 
-  if (strstr(extensions, "GL_EXT_draw_buffers") ||
-      strstr(extensions, "GL_ARB_draw_buffers") ||
-      (gl_info.is_es3 && strstr(extensions, "GL_NV_draw_buffers")) ||
+  if (enable_es3 || strstr(extensions, "GL_ARB_draw_buffers") ||
+      strstr(extensions, "GL_EXT_draw_buffers") || gl_info.is_es3 ||
       gl_info.is_desktop_core_profile) {
     EXPECT_CALL(*gl, GetIntegerv(GL_MAX_COLOR_ATTACHMENTS_EXT, _))
         .WillOnce(SetArgumentPointee<1>(8))
@@ -656,9 +655,8 @@ void TestHelper::SetupFeatureInfoInitExpectationsWithGLVersion(
 #endif
   }
 
-  if (strstr(extensions, "GL_EXT_draw_buffers") ||
-      strstr(extensions, "GL_ARB_draw_buffers") ||
-      (gl_info.is_es3 && strstr(extensions, "GL_NV_draw_buffers")) ||
+  if (enable_es3 || strstr(extensions, "GL_ARB_draw_buffers") ||
+      strstr(extensions, "GL_EXT_draw_buffers") || gl_info.is_es3 ||
       gl_info.is_desktop_core_profile) {
     EXPECT_CALL(*gl, GetIntegerv(GL_MAX_COLOR_ATTACHMENTS_EXT, _))
         .WillOnce(SetArgumentPointee<1>(8))
